--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
       - run: corepack enable
@@ -34,7 +34,7 @@ jobs:
       name: github_pages
       url: ${{ steps.deployment.outputs.page_url }}
     # Specify runner + deployment step
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
