--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,62 +1,34 @@
-name: Deploy to GitHub Pages
-
+name: Build and Deploy
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
-
+permissions:
+  contents: write
 jobs:
-  build:
-    runs-on: windows-latest
-
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: ${{ matrix.node-version }}
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Install & Generate 🔧
+        run: |
+          npm ci
+          npm run generate
+        env:
+          NUXT_APP_BASE_URL: ${{ vars.NUXT_APP_BASE_URL  }}
 
-      - name: Build 🔧
-        run: npx nuxt build --preset github_pages
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          name: github-pages
-          path: ./.output/public
-
-  deploy:
-    needs: build
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github_pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    runs-on: windows-latest
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-          path: ./.output/public
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          folder: ./.output/public
+          folder: dist
